<resources>
    <string name="app_name">M01_Calculator</string>
    <string name="plus">Plus</string>
    <string name="subtract">Subtract</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="clear">C</string>
    <string name="allClear">AC</string>
    <string name="back">B</string>
    <string name="forward">F</string>
    <string name="answer">0</string>
    <string name="history">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <string name="equals">=</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="initials_ch">Initials CH</string>
</resources>